[gd_scene load_steps=5 format=3 uid="uid://dl3viqq28pd3a"]

[ext_resource type="Script" path="res://control.gd" id="1_kunmh"]
[ext_resource type="AudioStream" uid="uid://7a1vxpxsfbtf" path="res://sound-fx-super-mario-let-s-go.wav" id="2_ajmrs"]
[ext_resource type="AudioStream" uid="uid://dki8upkhiam6p" path="res://discord-notification.mp3" id="3_v5ay1"]
[ext_resource type="AudioStream" uid="uid://3hna4m0u6ed2" path="res://Evala Krisko.mp3" id="4_sg743"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kunmh")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 140.0
offset_right = 302.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 30
text = "GUITAR
"

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ajmrs")

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v5ay1")

[node name="Button2" type="Button" parent="."]
offset_left = 179.0
offset_top = 231.0
offset_right = 306.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 30
text = "CHALGA"

[node name="EVALAKRISKO" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sg743")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
